--- a/mulai_tes.html
+++ b/mulai_tes.html
@@ -92,7 +92,7 @@
             <div class="grid lg:grid-cols-2 gap-12 items-center">
                 <div>
                     <span class="inline-block bg-white/60 backdrop-blur-lg px-6 py-2 rounded-full text-orange-600 font-semibold mb-4 shadow-lg">
-                        🧩 Tes Kesiapan & Rumah Tangga
+                        Tes Kesiapan & Rumah Tangga
                     </span>
                     <h1 class="text-4xl md:text-5xl font-bold text-gray-900 mb-6 leading-tight">
                         Kenali Kesiapanmu<br>
@@ -148,7 +148,7 @@
     <section id="tes" class="py-20 bg-white">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-16">
-                <span class="text-orange-500 font-semibold text-sm uppercase tracking-wider">Deskripsi Tes</span>
+                <span class="text-orange-500 font-semibold text-sm fa-house-heart">Deskripsi Tes</span>
                 <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mt-2 mb-4">
                     Rangkaian Tes yang Tersedia
                 </h2>
@@ -162,7 +162,7 @@
                 <!-- Tes Pra Nikah -->
                 <div class="bg-gradient-to-b from-orange-50 to-pink-50 rounded-3xl p-7 shadow-sm hover:shadow-xl transition flex flex-col">
                     <div class="w-12 h-12 bg-gradient-to-br from-orange-400 to-pink-500 rounded-2xl flex items-center justify-center mb-5">
-                        <i class="fas fa-ring text-white"></i>
+                        <i class="fas fa-heart text-white"></i>
                     </div>
                     <h3 class="text-xl font-bold text-gray-900 mb-2">Tes Persiapan Pra Nikah</h3>
                     <p class="text-sm text-orange-500 font-semibold mb-4">Fokus: Komunikasi, nilai, dan visi pernikahan</p>
@@ -210,7 +210,7 @@
                 <!-- Tes Simulasi Rumah Tangga -->
                 <div class="bg-gradient-to-b from-indigo-50 to-purple-50 rounded-3xl p-7 shadow-sm hover:shadow-xl transition flex flex-col">
                     <div class="w-12 h-12 bg-gradient-to-br from-indigo-400 to-purple-500 rounded-2xl flex items-center justify-center mb-5">
-                        <i class="fas fa-house-heart text-white"></i>
+                        <i class="fas fa-house text-white"></i>
                     </div>
                     <h3 class="text-xl font-bold text-gray-900 mb-2">Tes Simulasi Rumah Tangga</h3>
                     <p class="text-sm text-indigo-500 font-semibold mb-4">Fokus: Peran, tugas, dan dinamika sehari-hari</p>
