--- a/Index.html
+++ b/Index.html
@@ -131,7 +131,7 @@
                 <!-- Card 1 -->
                 <div class="bg-gradient-to-br from-orange-50 to-pink-50 rounded-3xl p-8 hover:shadow-xl transition">
                     <div class="w-16 h-16 bg-gradient-to-br from-orange-400 to-pink-500 rounded-2xl flex items-center justify-center mb-6">
-                        <i class="fas fa-users text-white text-2xl"></i>
+                        <i class="fas fa-user text-white text-2xl"></i>
                     </div>
                     <h3 class="text-2xl font-bold text-gray-900 mb-4">Asesmen Kesiapan Personal</h3>
                     <p class="text-gray-600 leading-relaxed">
@@ -153,7 +153,7 @@
                 <!-- Card 3 -->
                 <div class="bg-gradient-to-br from-blue-50 to-purple-50 rounded-3xl p-8 hover:shadow-xl transition">
                     <div class="w-16 h-16 bg-gradient-to-br from-blue-400 to-purple-500 rounded-2xl flex items-center justify-center mb-6">
-                        <i class="fas fa-lightbulb text-white text-2xl"></i>
+                        <i class="fas fa-hand text-white text-2xl"></i>
                     </div>
                     <h3 class="text-2xl font-bold text-gray-900 mb-4">Dukungan Aman dan Ramah Perempuan</h3>
                     <p class="text-gray-600 leading-relaxed">
@@ -181,7 +181,7 @@
                 <!-- Program 1 -->
                 <div class="bg-white rounded-2xl p-6 shadow-lg hover:shadow-2xl transition hover:-translate-y-2 border-t-4 border-orange-400">
                     <div class="w-12 h-12 bg-orange-100 rounded-xl flex items-center justify-center mb-4">
-                        <i class="fas fa-briefcase text-orange-500 text-xl"></i>
+                        <i class="fas fa-heart text-orange-500 text-xl"></i>
                     </div>
                     <h3 class="text-xl font-bold text-gray-900 mb-3">Tes Kesiapan Pra-Nikah</h3>
                     <p class="text-gray-600 text-sm mb-4">
@@ -192,7 +192,7 @@
                 <!-- Program 2 -->
                 <div class="bg-white rounded-2xl p-6 shadow-lg hover:shadow-2xl transition hover:-translate-y-2 border-t-4 border-pink-400">
                     <div class="w-12 h-12 bg-pink-100 rounded-xl flex items-center justify-center mb-4">
-                        <i class="fas fa-laptop-code text-pink-500 text-xl"></i>
+                        <i class="fas fa-house text-pink-500 text-xl"></i>
                     </div>
                     <h3 class="text-xl font-bold text-gray-900 mb-3">Tes Simulasi Rumah Tangga</h3>
                     <p class="text-gray-600 text-sm mb-4">
@@ -203,7 +203,7 @@
                 <!-- Program 3 -->
                 <div class="bg-white rounded-2xl p-6 shadow-lg hover:shadow-2xl transition hover:-translate-y-2 border-t-4 border-purple-400">
                     <div class="w-12 h-12 bg-purple-100 rounded-xl flex items-center justify-center mb-4">
-                        <i class="fas fa-hand-holding-heart text-purple-500 text-xl"></i>
+                        <i class="fas fa-wallet text-purple-500 text-xl"></i>
                     </div>
                     <h3 class="text-xl font-bold text-gray-900 mb-3">Tes Kestabilan Finansial</h3>
                     <p class="text-gray-600 text-sm mb-4">
@@ -214,7 +214,7 @@
                 <!-- Program 4 -->
                 <div class="bg-white rounded-2xl p-6 shadow-lg hover:shadow-2xl transition hover:-translate-y-2 border-t-4 border-blue-400">
                     <div class="w-12 h-12 bg-blue-100 rounded-xl flex items-center justify-center mb-4">
-                        <i class="fas fa-rocket text-blue-500 text-xl"></i>
+                        <i class="fas fa-book text-blue-500 text-xl"></i>
                     </div>
                     <h3 class="text-xl font-bold text-gray-900 mb-3">Modul Pembelajaran Singkat</h3>
                     <p class="text-gray-600 text-sm mb-4">
